[package]
name = "archive1"
version = "0.1.0"
authors = ["julio <julio.grillo98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.4.0"                 # Minimal HTTP request library
url = "2.1.1"              # URL library for Rust, based on the WHATWG URL Standard

[patch.crates-io]
ureq = { version = "1.4.0", path = "vendor/ureq" }
